compiler/weave_syntax/tests/data/Strings.error
error: Unexpected tokens
        --> <source>:68:2
         |
      68 | r#~"#"~#;
         |  ^^^^^^^^
      69 | ;
         | ^
